Fix scrollbar issue by applying a style to the gantt component body

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@ html, body{
     height:100%;
     padding:0px;
     margin:0px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 // Example of how to use theme variables
